@@ -13,7 +13,6 @@ import com.attendance_management_system.model.payload.EmployeeLeave;
 import com.attendance_management_system.repository.*;
 import com.attendance_management_system.service.LeaveApplicationService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.AutoConfigureOrder;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
 
@@ -27,14 +26,14 @@ import java.util.stream.Collectors;
 @Service
 public class LeaveApplicationServiceImpl implements LeaveApplicationService {
 
-    private LeaveApplicationRepository leaveApplicationRepository;
+    private final LeaveApplicationRepository leaveApplicationRepository;
 
-    private LeavePolicyRepository leavePolicyRepository;
+    private final LeavePolicyRepository leavePolicyRepository;
 
-    private EmployeeRepository employeeRepository;
+    private final EmployeeRepository employeeRepository;
 
-    private AttendanceDetailsRepository attendanceDetailsRepository;
-    private AttendanceRepository attendanceRepository;
+    private final AttendanceDetailsRepository attendanceDetailsRepository;
+    private final AttendanceRepository attendanceRepository;
 
     @Autowired
     public LeaveApplicationServiceImpl(LeaveApplicationRepository leaveApplicationRepository,
@@ -49,6 +48,15 @@ public class LeaveApplicationServiceImpl implements LeaveApplicationService {
         this.attendanceRepository=attendanceRepository;
     }
 
+    /**
+     * Creates a new leave application for the specified employee.
+     * @param email            The email address of the employee applying for leave.
+     * @param leaveApplication The leave application to be created.
+     * @return The created leave application.
+     * @throws CustomException If there is an issue creating the leave application
+       or if there are insufficient leaves.
+     * @author Kamil Praseej
+     */
     @Override
     public LeaveApplication createLeaveApplication(String email, LeaveApplication leaveApplication) throws CustomException {
         int leavesTaken, noOfDays=0, maximumLeaves, availableLeaves=0;
@@ -85,36 +93,50 @@ public class LeaveApplicationServiceImpl implements LeaveApplicationService {
         }
     }
 
+    /**
+     * Calculates the total number of leaves taken by an employee based on the leave policy.
+     * @param employee    The employee for whom leaves are calculated.
+     * @param leavePolicy The leave policy for which leaves are calculated.
+     * @return The total number of leaves taken.
+     * @author Kamil Praseej
+     */
     private int getTotalNumberOfLeavesTaken(Employee employee, LeavePolicy leavePolicy) {
-
         List<LeaveApplication> leaveApplications = leaveApplicationRepository
                 .findByEmployeeAndLeavePolicy(employee, leavePolicy)
                 .stream()
                 .filter(leave -> !leave.getStatus().equals(LeaveStatus.DENIED.getValue()))
-                .collect(Collectors.toList());
+                .toList();
 
-        int totalLeaves = leaveApplications.stream()
+        return leaveApplications.stream()
                 .mapToInt(LeaveApplication::getNoOfDays)
                 .sum();
-
-        return totalLeaves;
     }
 
-
+    /**
+     * Retrieves a list of leaves by category for the specified employee.
+     * @param employee The employee for whom leaves are fetched.
+     * @return The list of leaves by category.
+     * @author Kamil Praseej
+     */
     @Override
-    public List getLeavesByCategory(Employee employee){
-
-        List<EmployeeLeave> employeeLeaves= leavePolicyRepository.findAll()
+    public List<EmployeeLeave> getLeavesByCategory(Employee employee) {
+        return leavePolicyRepository.findAll()
                 .stream()
                 .map(leavePolicy -> {
                     int leavesTaken = getTotalNumberOfLeavesTaken(employee, leavePolicy);
                     return new EmployeeLeave(leavePolicy.getLeaveType(),
-                            leavePolicy.getMaximumLeaves()-leavesTaken, leavesTaken);
+                            leavePolicy.getMaximumLeaves() - leavesTaken, leavesTaken);
                 })
                 .collect(Collectors.toList());
-        return employeeLeaves;
     }
 
+    /**
+     * Retrieves a leave application by its ID.
+     * @param leaveApplicationId The ID of the leave application.
+     * @return The leave application with the specified ID.
+     * @throws CustomException If there is an issue fetching the leave application.
+     * @author Kamil Praseej
+     */
     @Override
     public LeaveApplication getLeaveApplicationById(Long leaveApplicationId) throws CustomException {
         try {
@@ -125,15 +147,28 @@ public class LeaveApplicationServiceImpl implements LeaveApplicationService {
         }
     }
 
+    /**
+     * Retrieves a list of all leave applications.
+     * @return The list of all leave applications.
+     * @throws CustomException If there is an issue fetching the leave applications.
+     * @author Kamil Praseej
+     */
     @Override
     public List<LeaveApplication> getAllLeaveApplications() throws CustomException {
         try {
             return leaveApplicationRepository.findAll();
         } catch (DataAccessException e) {
-            throw new CustomException("Failed to fetch leaveApplication.", e);
+            throw new CustomException("Failed to fetch leave applications.", e);
         }
     }
 
+    /**
+     * Retrieves a list of leave applications for the manager with the specified email.
+     * @param email The email address of the manager.
+     * @return The list of leave applications for the specified manager.
+     * @throws CustomException If there is an issue fetching the leave applications.
+     * @author Kamil Praseej
+     */
     @Override
     public List<LeaveApplication> getAllLeaveApplicationsByManager(String email) throws CustomException {
         try {
@@ -142,24 +177,31 @@ public class LeaveApplicationServiceImpl implements LeaveApplicationService {
                     .stream()
                     .filter(leaveApplication ->
                             leaveApplication.getEmployee().getReportingManager()
-                                    .equalsIgnoreCase(manager.getFirstName()+" "+manager.getLastName()))
+                                    .equalsIgnoreCase(manager.getFirstName() + " " + manager.getLastName()))
                     .toList();
         } catch (DataAccessException e) {
-            throw new CustomException("Failed to fetch leaveApplication.", e);
+            throw new CustomException("Failed to fetch leave applications.", e);
         }
     }
 
+    /**
+     * Updates the status of a leave application based on the specified status.
+     * @param leaveApplication The leave application to be updated.
+     * @param status           The status to be set (approved or denied).
+     * @return The updated leave application.
+     * @throws CustomException If there is an issue updating the leave application.
+     * @author Kamil Praseej
+     */
     @Override
     public LeaveApplication updateLeaveApplication(LeaveApplication leaveApplication, String status) throws CustomException {
         try {
-            if(status.equalsIgnoreCase("approved")){
+            if (status.equalsIgnoreCase("approved")) {
                 leaveApplication.setStatus(LeaveStatus.APPROVED.getValue());
-            }
-            else {
+            } else {
                 LocalDate startDate = leaveApplication.getFromDate();
                 LocalDate endDate = leaveApplication.getToDate();
                 startDate.datesUntil(endDate).forEach(date -> {
-                    if(date.isBefore(LocalDate.now()) || date.isEqual(LocalDate.now())) {
+                    if (date.isBefore(LocalDate.now()) || date.isEqual(LocalDate.now())) {
                         AttendanceDetails attendanceDetails =
                                 attendanceDetailsRepository.findByEmployeeAndAttendance
                                         (leaveApplication.getEmployee(), attendanceRepository.findByDate(date));
@@ -171,22 +213,34 @@ public class LeaveApplicationServiceImpl implements LeaveApplicationService {
             }
             return leaveApplicationRepository.save(leaveApplication);
         } catch (DataAccessException e) {
-            throw new CustomException("Failed to update leaveApplication.", e);
+            throw new CustomException("Failed to update leave application.", e);
         }
     }
 
+    /**
+     * Deletes a leave application with the specified ID.
+     * @param leaveApplicationId The ID of the leave application to be deleted.
+     * @throws CustomException If there is an issue deleting the leave application.
+     * @author Kamil Praseej
+     */
     @Override
     public void deleteLeaveApplication(Long leaveApplicationId) throws CustomException {
         try {
             leaveApplicationRepository.deleteById(leaveApplicationId);
         } catch (DataAccessException e) {
-            throw new CustomException("Failed to delete leaveApplication.", e);
+            throw new CustomException("Failed to delete leave application.", e);
         }
     }
 
-
-
+    /**
+     * Calculates the number of days between two dates inclusively.
+     * @param startDate The start date.
+     * @param endDate   The end date.
+     * @return The number of days between the start and end dates inclusive.
+     * @author Kamil Praseej
+     */
     public int calculateNumberOfDaysInclusive(LocalDate startDate, LocalDate endDate) {
         return (int) (ChronoUnit.DAYS.between(startDate, endDate) + 1);
     }
 }
+
